--- a/FocusFinderApp/wwwroot/css/site.css
+++ b/FocusFinderApp/wwwroot/css/site.css
@@ -2,6 +2,11 @@ html {
   font-size: 14px;
 }
 
+.body-inner {
+  width: 100%;
+  background-color: #ececec;
+}
+
 @media (min-width: 768px) {
   html {
     font-size: 16px;
@@ -17,11 +22,10 @@ html {
     height: 100vh;
     width: 15rem;
     box-shadow: 0 7rem 0.3rem 0.5rem rgba(0, 0, 0, 0.1);
+    z-index: 100;
   }
   .body-inner {
     margin-left: 15rem;
-    width: 100%;
-    background-color: #ececec;
   }
 }
 
@@ -32,11 +36,12 @@ html {
 }
 
 header {
-  width: 100%;
+  width: 100vw;
   background-color: white;
   height: 6rem;
   position: fixed;
   box-shadow: 0.4rem 0rem 0.3rem 0.5rem rgba(0, 0, 0, 0.1);
+  z-index: 99;
 }
 
 .container {
@@ -53,7 +58,14 @@ html {
 }
 
 body {
-  margin: 0px 0px 60px 0px;
+  margin: 0px 0px 0px 0px;
   display: flex;
   font-family: Arial, sans-serif;
+}
+
+.foot {
+  width: auto;
+  padding: 2rem;
+  text-align: center;
+  vertical-align: middle;
 }
