added bookmark animation

--- a/FocusFinderApp/Views/Home/Index.cshtml
+++ b/FocusFinderApp/Views/Home/Index.cshtml
@@ -43,19 +43,28 @@
                     <div class="i-location-container glow-back i-study-pic-container">
                         <img src="@Url.Content(location.ImageURL)" alt="@location.LocationName">
                         <div class="i-location-info">
-                            <h2>@location.City</h2>
-                            <p>
-                                Rating: @(location.Reviews?.Any() == true ? $"{Math.Round((decimal)(location.Reviews.Average(r => (double?)r.overallRating) ?? 0), 1)} ⭐" : "No ratings yet")
-                            </p>
+                            <div class="m-header"><h2>@location.City</h2></div>
                             <div class="i-bookmark-container">
                                 @if (ViewBag.IsLoggedIn == true)
                                 {
                                     <form method="post" asp-controller="Bookmark" asp-action="Add">
                                         <input type="hidden" name="locationId" value="@location.Id">
-                                        <button type="submit" class="bookmark-button"></button>
+                                        <button type="submit" class="bookmark-button ab"></button>
                                     </form>
                                 }
                             </div>
+                            <div class="i-bookmark-container">
+                                @if (ViewBag.IsLoggedIn == true)
+                                {
+                                    <form method="post" asp-controller="Bookmark" asp-action="Add">
+                                        <input type="hidden" name="locationId" value="@location.Id">
+                                        <button type="submit" class="bookmark-button book-but"></button>
+                                    </form>
+                                }
+                            </div>
+                            <div class="m-rating"><p>
+                                Rating: @(location.Reviews?.Any() == true ? $"{Math.Round((decimal)(location.Reviews.Average(r => (double?)r.overallRating) ?? 0), 1)} ⭐" : "No ratings yet")
+                            </p></div>
                         </div>
                     </div>
             </a>
