--- a/FocusFinderApp/wwwroot/css/site.css
+++ b/FocusFinderApp/wwwroot/css/site.css
@@ -69,3 +69,15 @@ body {
   text-align: center;
   vertical-align: middle;
 }
+
+h2 {
+  margin: 1rem 0;
+}
+
+p {
+  margin-top: 0px;
+}
+
+.ab {
+  position: absolute;
+}
