--- a/FocusFinderApp/Views/Home/Index.cshtml
+++ b/FocusFinderApp/Views/Home/Index.cshtml
@@ -47,19 +47,47 @@
                             <div class="i-bookmark-container">
                                 @if (ViewBag.IsLoggedIn == true)
                                 {
-                                    <form method="post" asp-controller="Bookmark" asp-action="Add">
+                                  var isBookmarked = ViewBag.BookmarkedLocations != null && ViewBag.BookmarkedLocations.Contains(location.Id);
+
+                                  @if (isBookmarked)
+                                  {
+                                      <form method="post" asp-controller="Bookmark" asp-action="Remove">
                                         <input type="hidden" name="locationId" value="@location.Id">
+                                        <input type="hidden" name="redirectUrl" value="@Context.Request.Path">
                                         <button type="submit" class="bookmark-button ab"></button>
-                                    </form>
+                                      </form>
+                                  }
+                                  else
+                                  {
+                                      <form method="post" asp-controller="Bookmark" asp-action="Add">
+                                        <input type="hidden" name="locationId" value="@location.Id">
+                                        <input type="hidden" name="redirectUrl" value="@Context.Request.Path">
+                                        <button type="submit" class="bookmark-button ab"></button>
+                                      </form>
+                                  }
                                 }
                             </div>
                             <div class="i-bookmark-container">
                                 @if (ViewBag.IsLoggedIn == true)
                                 {
-                                    <form method="post" asp-controller="Bookmark" asp-action="Add">
+                                  var isBookmarked = ViewBag.BookmarkedLocations != null && ViewBag.BookmarkedLocations.Contains(location.Id);
+
+                                  @if (isBookmarked)
+                                  {
+                                      <form method="post" asp-controller="Bookmark" asp-action="Remove">
                                         <input type="hidden" name="locationId" value="@location.Id">
+                                        <input type="hidden" name="redirectUrl" value="@Context.Request.Path">
                                         <button type="submit" class="bookmark-button book-but"></button>
-                                    </form>
+                                      </form>
+                                  }
+                                  else
+                                  {
+                                      <form method="post" asp-controller="Bookmark" asp-action="Add">
+                                        <input type="hidden" name="locationId" value="@location.Id">
+                                        <input type="hidden" name="redirectUrl" value="@Context.Request.Path">
+                                        <button type="submit" class="bookmark-button book-but"></button>
+                                      </form>
+                                  }
                                 }
                             </div>
                             <div class="m-rating"><p>
