--- a/FocusFinderApp/Views/Shared/_Layout.cshtml
+++ b/FocusFinderApp/Views/Shared/_Layout.cshtml
@@ -11,10 +11,18 @@
 </head>
 <body>
     <nav class="sidebar">
+        <div class="sidebar-container">
+            <a class="logo hoverable" href="/">
+                <img src="../images/icons/ff-logo.jpg" alt="Logo" asp-area="" asp-controller="Home" asp-action="Index" width="100%" height="100%">
+            </a>
+            <h2 class="al-cen">
+                FocusFinder
+            </h2>
+        </div>
     </nav>
     <div class="body-inner">
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">FocusFinderApp</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
