--- a/FocusFinderApp/Views/Home/Location.cshtml
+++ b/FocusFinderApp/Views/Home/Location.cshtml
@@ -143,4 +143,42 @@
         <p>(awaiting column in Locations table)</p>
     </div>
 
-</div>
+    <div id="map" style="width: 100%; height: 400px;"></div>
+
+    <!-- Button to Open in Google Maps -->
+    <div>
+        <a href="https://www.google.com/maps/search/?api=1&query=@($"{Model.StreetAddress}, {Model.City}, {Model.County}, {Model.Postcode}")"
+           target="_blank" class="btn btn-primary">
+            See it on Google Maps
+        </a>
+    </div>
+    
+    <script>
+        function initMap() {
+            var location = "@Model.StreetAddress, @Model.City, @Model.County, @Model.Postcode";
+    
+            var map = new google.maps.Map(document.getElementById("map"), {
+                zoom: 15,
+                center: { lat: 51.5074, lng: -0.1278 } // Default to London (change dynamically below)
+            });
+    
+            var geocoder = new google.maps.Geocoder();
+            geocoder.geocode({ 'address': location }, function (results, status) {
+                if (status === 'OK') {
+                    map.setCenter(results[0].geometry.location);
+                    new google.maps.Marker({
+                        map: map,
+                        position: results[0].geometry.location
+                    });
+                } else {
+                    console.error("Geocoding failed: " + status);
+                }
+            });
+        }
+    </script>
+    
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBekH4yExseN31F2_ai2f5AnjyoWfJx7MQ&callback=initMap"></script>
+    
+    
+    
+    </div>
