moved search bar to topnav

--- a/FocusFinderApp/Views/Home/Index.cshtml
+++ b/FocusFinderApp/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="~/css/home.css" asp-append-version="true" />
 </head>
 
-<div class="i-body-top body-top">
+<div class="i-body-top body-top mob">
     <div class="text-center">
         <form asp-controller="Location" asp-action="Search" method="get" class="search-form">
             <input type="text" name="searchQuery" placeholder="Search by name or address" class="search-input" required>
