Maps added to location page using google api

--- a/FocusFinderApp/Views/Home/Location.cshtml
+++ b/FocusFinderApp/Views/Home/Location.cshtml
@@ -177,7 +177,7 @@
         }
     </script>
     
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBekH4yExseN31F2_ai2f5AnjyoWfJx7MQ&callback=initMap"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=@Context.Items["GoogleMapsApiKey"]&callback=initMap"></script>
     
     
     
