added .env file - related to other code for API

--- a/FocusFinderApp/Views/Reviews/IndivReview.cshtml
+++ b/FocusFinderApp/Views/Reviews/IndivReview.cshtml
@@ -21,7 +21,15 @@
                 <h1 > Review - Id @ViewBag.Review.id </h1>
                 <p>Review for location: @ViewBag.Location.LocationName</p>
             </div>
-            <h5>You're signed in! Edit your review below...</h5>
+            <p>Edit your review below...</p>
+            
+            <h4>Rate this place out of 5 stars!</h4>
+            <p>1-5*</p>
+            <p>Comments...</p>
+
+            <h4>What tickled your fancy?</h4>
+
+            <h4>Add tags!</h4>
         }
     }
     
