--- a/FocusFinderApp/Views/Home/Index.cshtml
+++ b/FocusFinderApp/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
     <div class="text-center">
         <form asp-controller="Location" asp-action="Search" method="get" class="search-form">
             <input type="text" name="searchQuery" placeholder="Search by name or address" class="search-input" required>
-            <button type="submit" class="search-button">Search</button>
+            <button type="submit" class="search-button">&rsaquo;</button>
         </form>
     </div>
 </div>
