--- a/FocusFinderApp/wwwroot/css/profile.css
+++ b/FocusFinderApp/wwwroot/css/profile.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     min-height: 80vh;
-    background-color: #f8f9fa;
+    background-color: #f6f6f6;
     padding: 20px;
 }
 
