i-container added to most webpages

--- a/FocusFinderApp/Views/Users/Edit.cshtml
+++ b/FocusFinderApp/Views/Users/Edit.cshtml
@@ -1,5 +1,5 @@
 @model FocusFinderApp.Models.UserEditModelView
-
+<div class="i-container">
 <form action="/Profile/Edit" method="post" enctype="multipart/form-data">
     <div>
         <label>First Name:</label>
@@ -32,3 +32,4 @@
     <a href="/Profile/ChangePassword" class="btn btn-warning">Change Password</a>
     <button type="submit" class="btn btn-primary">Save Changes</button>
 </form>
+</div>
