--- a/FocusFinderApp/Views/Users/Register.cshtml
+++ b/FocusFinderApp/Views/Users/Register.cshtml
@@ -1,4 +1,5 @@
 @model FocusFinderApp.Models.User
+<div class="i-container">
 <form class="login-form" action="/Register" method="post">
     <fieldset>
         <legend>Register Now</legend>
@@ -28,6 +29,7 @@
         </div>
     </fieldset>
 </form>
+</div>
         
 
 @section Scripts {
