--- a/FocusFinderApp/Views/Home/Location.cshtml
+++ b/FocusFinderApp/Views/Home/Location.cshtml
@@ -71,7 +71,24 @@
                 {
                     <a href="/Login" class="btn btn-primary">Login to Bookmark</a>
                 }
-            </div>
+        </div>
+
+        <!-- New Ext Review Button -->
+        @{if (!ViewBag.IsLoggedIn)
+            {
+                <!-- New review buttion - asks user to login -->
+                <a href="/Login" class="btn btn-primary">Login to leave a review</a>
+            } else {
+                <p>logged in, now to leave a review!</p>
+                @* <a href="/Reviews/NewReview" class="btn btn-primary">Create New Review</a> *@
+                <form method="get" asp-controller="Review" asp-action="NewReviewForm">
+                    <input type="hidden" name="locationId" value="@Model.Id">
+                    <button type="submit" class="btn btn-primary">Create New Review</button>
+                </form>
+            }
+        }
+
+
     </div>
 
     <!-- Bio -->
@@ -92,7 +109,7 @@
     </div>
 
 
-    <!-- Reviews Section -->
+    <!-- Reviews(1-5*) Section -->
     <div>
         @{
             var reviews = Model.Reviews as IEnumerable<FocusFinderApp.Models.Review>;
