profile icon now links to user profile instead of empty route

--- a/FocusFinderApp/Views/Shared/_Layout.cshtml
+++ b/FocusFinderApp/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                 {
                     <p class="welcome">Welcome, @ViewBag.Username!</p>
                     <div class="side-item">
-                        <a class="sidebar-icon" href="/Profile">
+                        <a class="sidebar-icon" href="/Profile/@ViewBag.Username">
                             <img src="../images/icons/profile.jpg" alt="Profile">
                         </a>
                         <a class="sidebar-text" href="/Profile/@ViewBag.Username" class="btn">Profile</a>
@@ -72,7 +72,7 @@
                 {
                     <p class="welcome">Welcome, @ViewBag.Username!</p>
                     <div class="side-item">
-                        <a class="sidebar-icon" href="/Profile">
+                        <a class="sidebar-icon" href="/Profile/@ViewBag.Username">
                             <img src="../images/icons/profile.jpg" alt="Profile">
                         </a>
                         <a class="sidebar-text" href="/Profile/@ViewBag.Username" class="btn">Profile</a>
