--- a/FocusFinderApp/Views/Home/Index.cshtml
+++ b/FocusFinderApp/Views/Home/Index.cshtml
@@ -37,7 +37,7 @@
                                       <form method="post" asp-controller="Bookmark" asp-action="Remove">
                                         <input type="hidden" name="locationId" value="@location.Id">
                                         <input type="hidden" name="redirectUrl" value="@Context.Request.Path">
-                                        <button type="submit" class="bookmark-button ab"></button>
+                                        <button type="submit" class="bookmark-button ab bookmarked"></button>
                                       </form>
                                   }
                                   else
@@ -45,7 +45,7 @@
                                       <form method="post" asp-controller="Bookmark" asp-action="Add">
                                         <input type="hidden" name="locationId" value="@location.Id">
                                         <input type="hidden" name="redirectUrl" value="@Context.Request.Path">
-                                        <button type="submit" class="bookmark-button ab"></button>
+                                        <button type="submit" class="bookmark-button ab bookmarked"></button>
                                       </form>
                                   }
                                 }
@@ -60,7 +60,7 @@
                                       <form method="post" asp-controller="Bookmark" asp-action="Remove">
                                         <input type="hidden" name="locationId" value="@location.Id">
                                         <input type="hidden" name="redirectUrl" value="@Context.Request.Path">
-                                        <button type="submit" class="bookmark-button book-but"></button>
+                                        <button type="submit" class="bookmark-button book-but bookmarked"></button>
                                       </form>
                                   }
                                   else
@@ -68,7 +68,7 @@
                                       <form method="post" asp-controller="Bookmark" asp-action="Add">
                                         <input type="hidden" name="locationId" value="@location.Id">
                                         <input type="hidden" name="redirectUrl" value="@Context.Request.Path">
-                                        <button type="submit" class="bookmark-button book-but"></button>
+                                        <button type="submit" class="bookmark-button book-but unbookmarked"></button>
                                       </form>
                                   }
                                 }
