--- a/FocusFinderApp/wwwroot/css/home.css
+++ b/FocusFinderApp/wwwroot/css/home.css
@@ -125,3 +125,15 @@ button {
     z-index: 96;
     cursor: pointer;
 }
+
+.m-rating {
+    display: flex;
+    flex-direction: row;
+}
+
+.star img {
+    height: 1rem;
+    width: 1rem;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    margin-left: 0.4rem
+  }
